Change History
==============

1.7b2 2011-06-05
----------------

- Drag and drop stopped working in 4.1 due to loss of id context in
  placeholder. Fixed.
  [smcmahon]

- Previous fix to duplicate action adapters did not preserve order of
  execution. Fixed.
  [smcmahon]

- Fix misleading failure in attachments tests. Test didn't account for
  quick editor changes.
  [smcmahon]

- Form fields could not be independently viewed in Plone 4/4.1.
  [smcmahon]

- Fixed issue with image captions not displaying in form prologue/epilogue
  [dextermilo]

1.7b1 2011-05-21
----------------

- Load ZCML for collective.js.jqueryui.
  [davisagli]

- Add collective.portlet.itemview integration.
  [toutpt]

- Use sets to avoid duplicate action adapters in form.py. Fixes
  http://plone.org/products/ploneformgen/issues/263
  [tkimnguyen]

1.7a2 2011-03-26
----------------

- Add confirm dialog for clearing saved data. The dialog text should
  be translatable with msgid clear-saved-input-confirm.
  [stevem]

- Add plone.protect tests to saver's clearSavedFormInput.
  [stevem]

- Get quickedit's drag and drop working with actions as well as fields.
  [stevem]

- Use collective.js.jqueryui instead of an embeded version custom of jqueryui.
  make it easy to integrate with other add-ons.
  Switch profile version from the egg version to an integer to increase with
  each changes done on the profile.
  [toutpt]

- Add Norwegian translations
  [mj]

1.7a1 2010-12-28
----------------

- Move quickedit functionality into a separate view rather than a
  JavaScript manipulation of the standard view.
  [stevem]

- Put the css, especially extra css for specific fields, into the
  style_slot.
  Fixes http://plone.org/products/ploneformgen/issues/299
  [maurits]

- Added simple translation layer for messages embedded in JS.
  [stevem]

- Remove 2.5 support setup profile and templates. 2.5 hasn't been supported since
  1.6. Stripped all the "not HAS_PLONE30" code.
  [stevem]
