@@ -4,6 +4,10 @@ Change History
 1.7b2 2011-06-05
 ----------------
 
+- In quickedit, normalize required markers to Plone 4 style (after the label)
+  so that we can use the same js for p4 and p4.1.
+  [smcmahon]
+
 - Drag and drop stopped working in 4.1 due to loss of id context in
   placeholder. Fixed.
   [smcmahon]
